<resources>
    <string name="app_name">Kitchen Companion</string>
    <string name="my_fridge">My fridge</string>
    <string name="add_food"> Add Food</string>
    <string name="add_recipe"> Add Recipe</string>
    <string name="generate_recipe">Generate Recipe</string>
    <string name="ground_beef">• Ground Beef</string>
    <string name="protein">Protein</string>
    <string name="dairy">Dairy</string>
    <string name="grains">Grains</string>
    <string name="other">Other</string>
    <string name="fruit">Fruit</string>
    <string name="vegetables">Vegetables</string>
    <string name="recipe_title">Recipe title</string>
    <string name="add">Add</string>
    <string name="video_link">Video link (optional)</string>
    <string name="select_type_of_food">Select type of food</string>
    <string name="add_ingredient">Add ingredient</string>
    <string name="finish">Finish</string>
    <string name="number_of_servings">Number of servings</string>
    <string name="directions">Directions</string>
    <string name="menu_settings">Settings</string>
    <string name="home">Home</string>
    <string name="categoryimage">CategoryImage</string>
    <string name="delete">Delete</string>
    <string name="recipes">Recipes</string>
    <string name="quantity">Quantity</string>
    <string name="back">back</string>
</resources>